# kronk-fastapi

./: .gitignore  README.md
certs/: .env
pod/: Dockerfile  alembic.ini  main.py  pyproject.toml
pod/alembic/: env.py
pod/alembic/versions/: 1c16e07c92f8_initial_migration.py  243c3fb6c88f_initial_migration.py  2be3900f28e6_initial_migration.py  49ad1dc30bf7_some_fixes_model.py  6f740d75fb6a_no_cascade_for_sentence_words.py  72f984320670_fixed_engagement_model.py  76196edb0cd1_added_note_model.py  b3115a703772_added_note_model.py  bd36ff974727_added_block_model.py  e72c1bf6b0bf_added_vocabulary_model.py  e9dc52f39a32_added_image_and_video_aspect_ratio.py
pod/apps/chats_app/: app_tasks.py  models.py  routes.py  schemas.py  ws.py
pod/apps/feeds_app/: models.py  routes.py  schemas.py  tasks.py  ws.py
pod/apps/notes_app/: app_tasks.py  models.py  routes.py  schemas.py  tasks.py
pod/apps/users_app/: app_tasks.py  models.py  routes.py  schemas.py  tasks.py
pod/apps/vocabularies_app/: app_tasks.py  models.py  routes.py  schemas.py  tasks.py
pod/apps/vocabulary_app/: models.py  routes.py  schemas.py  tasks.py
pod/certs/: kronk-production-gcp-credentials.json
pod/certs/ca/: ca.pem
pod/certs/docker/: docker-client-key.pem  docker-server-key.pem
pod/certs/fastapi/: fastapi-client.csr
pod/certs/postgres/: pg-server.csr
pod/certs/redis/: redis-server-key.pem  redis-server.csr
pod/services/: firebase_service.py  zepto_service.py
pod/settings/: my_boto3.py  my_config.py  my_database.py  my_dependency.py  my_minio.py  my_redis.py  my_taskiq.py  my_websocket.py
pod/static/templates/: account_deletion_info.html  community_guidelines.html  privacy_policy.html  safety.html  support.html  terms_of_service.html
pod/utility/: event_dispatcher.py  my_enums.py  my_logger.py  utility.py  validators.py
(+39 files in other folders)
