[project]
name = "kronk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "fastapi-cli",
    "uvicorn",
    "uvloop",
    "python-multipart",
    "jinja2",
    "httpx",
    "asyncpg",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "pydantic-async-validation",
    "aiofiles",
    "aiohttp",
    "python-dateutil",
    "bcrypt",
    "fastapi-jwt[authlib]",
    "passlib",
    "firebase-admin",
    "miniopy-async",
    "modern-colorthief",
    "opencv-python-headless",
    "pillow",
    "coredis",
    "redis",
    "python-ffmpeg",
    "pymediainfo",
    "prometheus-fastapi-instrumentator",
    "taskiq[reload]",
    "taskiq_redis",
    "taskiq-fastapi",
    "google-cloud-vision",
    "google-cloud-translate",
    # "google-cloud-storage",
    "gcloud-aio-storage",
    "nltk",
    "spacy",
    "pip",
    "aioboto3>=15.1.0",
]

[dependency-groups]
dev = [
    "alembic",
    "basedpyright",
    "black",
    "ipython",
    "isort",
    "loguru",
    "python-json-logger",
    "types-aioboto3[essential]",
    "types-redis",
]

[tool.pyright]
include = ["."]
venvPath = "./"
venv = ".venv"
extraPaths = [".venv", ".env", "venv", "env", "pod/.venv"]
typeCheckingMode = "strict"
pythonVersion = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 180

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
mypy_path = [".venv", ".env", "venv", "env", "./pod/.venv", "./pod/.env"]
files = ["./", "./pod/"]
strict = true
ignore_missing_imports = false

[tool.black]
line-length = 180
target-version = ["py313"]

[tool.ty.src]
root = "./"

[tool.ty.environment]
python = ".venv"
python-version = "3.13"




